manifests/security/networkpolicy-data.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-restrict
  namespace: data
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: app
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: streaming
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: observability
      ports:
        - port: 5432
          protocol: TCP
        - port: 9200
          protocol: TCP
        - port: 9300
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: streaming
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: observability
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 9092
          protocol: TCP
        - port: 9300
          protocol: TCP
        - port: 443
          protocol: TCP
