manifests/security/networkpolicy-observability.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability-allow
  namespace: observability
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: app
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: data
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: streaming
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: data
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: app
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
          protocol: TCP
